# postgsail-telegram-bot

./: .dockerignore  .env.example  .env.sample  .flake8  .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.codesandbox/: Dockerfile  tasks.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: checks.yml  docker-image.yml  ghrc-image.yml
bot/: __init__.py  __main__.py  api.py  commands.py  database.py  handlers.py  handlers_api.py  loader.py
src/api/: client.ts
src/bot/: index.ts
src/bot/commands/: boat.ts  graph.ts  logs.ts  monitoring.ts  moorages.ts  settings.ts  stays.ts
src/bot/scenes/: auth.scene.ts
src/i18n/: index.ts
src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts
src/mcp/: client.ts
src/orchestration/: agent.ts
src/types/: context.ts
src/utils/: errors.ts  format.ts  logger.ts  retry.ts  typing.ts
tests/api/: client.test.ts
tests/i18n/: i18n.test.ts
tests/utils/: errors.test.ts  format.test.ts  retry.test.ts
