[tool.poetry]
name = "postgsail-telegram-bot"
version = "0.2.1"
description = "PostgSail telegram bot"
authors = ["xbgmsharp <xbgmsharp@gmail.com>"]
license = "GPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiogram = "^2.25.2"
asyncpg = "^0.28.0"
simplejson = "^3.19.2"
loguru = "^0.7.2"
uvloop = "^0.18.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.6"
emoji = "^2.8.0"
python-telegram-bot = "^22.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^23.3"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-bugbear = "^23.3.12"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^3.3.1"
flake8-variables-names = "^0.0.6"
flake8-black = "^0.3.3"
flake8-isort = "^6.0.0"
pyflakes = "^2.4.0"
pep8-naming = "^0.13.2"
mypy = "^1.3"
autoflake = "^1.7"
pyupgrade = "^3.1.0"
yesqa = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["bot", "test"]
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
python_version = "3.11"
files = "bot/*.py"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
